# teasers

./: .gitignore  README.md  pyproject.toml
src/: db.sqlite3  manage.py
src/accounts/: admin.py  models.py
src/accounts/migrations/: 0001_initial.py
src/adverteasing/: asgi.py  settings.py  urls.py  wsgi.py
src/api/: api.py
src/api/teasers/: schemas.py  shortcuts.py  views.py
src/teasers/: admin.py  apps.py  choices.py  forms.py  models.py  urls.py
src/teasers/migrations/: 0001_initial.py  0002_initial.py  0003_alter_teaser_status.py
src/users/: admin.py  choices.py  models.py
src/users/migrations/: 0001_initial.py  0002_add_first_last_name.py
tests/functional/teasers/: conftest.py  test_api.py
